--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- Banner -->
             <div id="banner">
                 <video autoplay muted loop id="walking-video">
-                    <source src="assets/video/walk_summer.mp4" type="video/mp4">
+                    <source src="assets/video/walk_summer_compress.mp4" type="video/mp4">
                     Your browser does not support HTML5 video.
                 </video>
                 <h1 class="title">Archeal & Jenny</h1>
@@ -385,7 +385,7 @@
                 </div>
             </div>
             <div class="text-center py-5">
-                <p>© 2023 September 9</p>
+                <p>♡ 2023 September 9</p>
             </div>
             <!-- End of Footer -->
 
