--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             </p>
                             <p>
                                 <span class="font-bold">Gentleman:</span>
-                                <span>formal</span>
+                                <span>Formal</span>
                             </p>
                         </div>
                         <div class="card reveal fade-bottom md:duration-3">
