--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="sponsors grid xs:grid-cols-2 xs:gap-x-20 mb-2 reveal fade-bottom">
                     <p>Athan Hutalla</p>
                     <p>Rosal Hutalla</p>
-                    <p>Goelio Umayaw</p>
+                    <p>Godelio Umayaw</p>
                     <p>Cristina Umayaw</p>
                     <p>Jonilo De Juan</p>
                     <p>Mitch De Juan</p>
@@ -185,7 +185,6 @@
                         <p>Jessica De Juan</p>
                         <p>Arlyn Aras</p>
                         <p>Mariam Balisacan</p>
-                        <p>Ma. Roselle Castillano</p>
                         <p>Mary Joy Lumacang</p>
                         <p>Lorem Ipsum</p>
                         <p>Lorem Ipsum</p>
@@ -205,7 +204,7 @@
                 <div class="grid sm:grid-cols-3 gap-2 mb-5 reveal fade-bottom">
                     <div>
                         <h3 class="en-title">CANDLE</h3>
-                        <p>Lorem Ipsum</p>
+                        <p>Ma. Roselle Castillano</p>
                         <p>Lorem Ipsum</p>
                     </div>
                     <div>
@@ -299,10 +298,9 @@
                         <h3 class="text-2xl sm:text-4xl">Can't Wait to See You</h3>
                         <img src="assets/icons/leaf.png" alt="Leaf" class="justify-self-center">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                            It is with great pleasure that we announce our upcoming nuptials. 
+                            We would be honored if you could join us in celebrating this joyous occasion as we exchange our vows and begin our journey together as one. 
+                            Further details will be forthcoming. Please save the date and accept our sincerest gratitude in advance for your attendance. Warm regards.
                         </p>
                     </div>
                     <div class="flex justify-center flex-wrap">
