--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p>Godelio Umayaw</p>
                     <p>Cristina Umayaw</p>
                     <p>Jonilo De Juan</p>
-                    <p>Mitch De Juan</p>
+                    <p>Micheryl De Juan</p>
                     <p>Lorem Ipsum</p>
                     <p>Lorem Ipsum</p>
                     <p>Lorem Ipsum</p>
