--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="loading-page" id="loader">
             <div class="text-center cursor-pointer" onclick="playAudio()">
                 <i class="fa fa-heart-o animate-ping text-brand font-bold text-2xl lg:text-4xl mb-3" aria-hidden="true" ></i>
-                <p class="text-sm hidden" id="click-me">Click Here</p>
+                <p class="text-sm hidden" id="click-me">CLICK HERE</p>
             </div>
         </div>
         <div class="container hidden" id="content">
