--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
     <body>
         <div class="loading-page" id="loader">
             <div class="text-center">
-                <i class="fa fa-heart-o animate-ping text-brand font-bold text-2xl lg:text-4xl" aria-hidden="true" id="popping-heart" ></i>
+                <span class="relative flex" id="heart-container">
+                    <i class="fa fa-heart" aria-hidden="true" id="popping-heart"></i>
+                    <i class="fa fa-heart text-white font-bold text-2xl lg:text-4xl relative inline-flex" aria-hidden="true"></i>
+                </span>
                 <button 
                     class="hidden text-sm px-3 py-2 text-white rounded-full my-3 cursor-pointer" 
                     style="background-color: #f6a1928c;" 
@@ -420,7 +423,7 @@
                     var arrow = document.getElementById("arrow");
                     arrow.classList.remove("hidden");
                     
-                    var img = document.getElementById("popping-heart");
+                    var img = document.getElementById("heart-container");
                     img.classList.add("hidden");
                 }
 
