update meta data

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="csrf-token" content="OdilwJd73im7J4faQSAFpzRc44wiHsKqeyoI4HKl">
     <link rel="icon" href="assets/icons/logo2.png">
 
-    <meta property="og:title" content="Archeal &amp; Jenny">
-    <meta property="og:description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
+    <meta property="og:title" content="Archeal &amp; Jenny | Ecclesiastes 3:11 - He has made everything beautiful in its time. . .">
+    <meta property="og:description" content="It is with great pleasure that we announce our upcoming nuptials. We would be honored if you could join us in celebrating this joyous occasion as we exchange our vows and begin our journey together as one.">
     <meta property="og:image" content="assets/images/archeal_jenny2.jpg">
     <meta property="og:url" content="/">
     <meta property="og:type" content="website">
 
     <!-- Twitter -->
-    <meta name="twitter:title" content="Archeal &amp; Jenny">
-    <meta name="twitter:description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
+    <meta name="twitter:title" content="Archeal &amp; Jenny | Ecclesiastes 3:11 - He has made everything beautiful in its time. . .">
+    <meta name="twitter:description" content="It is with great pleasure that we announce our upcoming nuptials. We would be honored if you could join us in celebrating this joyous occasion as we exchange our vows and begin our journey together as one.">
     <meta name="twitter:image" content="assets/images/archeal_jenny2.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
-    <title>Archeal &amp; Jenny</title>
-    <meta name="description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
+    <title>Archeal &amp; Jenny | Ecclesiastes 3:11 - He has made everything beautiful in its time. . .</title>
+    <meta name="description" content="It is with great pleasure that we announce our upcoming nuptials. We would be honored if you could join us in celebrating this joyous occasion as we exchange our vows and begin our journey together as one.">
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
