--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <i class="fa fa-heart text-white font-bold text-2xl lg:text-4xl relative inline-flex" aria-hidden="true"></i>
             </span>
             <button 
-                class="hidden px-6 py-4 text-white rounded-full my-3 cursor-pointer" 
+                class="hidden btn" 
                 style="background-color: #f6a1928c; border: 1px solid white; box-shadow: 0px 0px 17px #ffffffd9;" 
                 id="click-me" 
                 onclick="playAudio()"
@@ -289,7 +289,7 @@
                             <p>We have reserved seats for you. The favor of your reply is requested on June 30, 2023</p>
                         </div>
                         <div class="text-center" style="align-self: end;">
-                            <a onclick="openModal('map-modal')" class="text-brand hover:underline cursor-pointer">See Location</a>
+                            <button onclick="openModal('map-modal')" class="btn">See Location</button>
                         </div>
                     </div>
                     <div class="card reveal fade-bottom md:duration-2">
@@ -327,7 +327,7 @@
                             </p>
                         </div>
                         <div class="text-center" style="align-self: end;">
-                            <a onclick="openModal('gift-modal')" class="text-brand hover:underline cursor-pointer">See Details</a>
+                            <button onclick="openModal('gift-modal')" class="btn">See Details</button>
                         </div>
                     </div>
                 </div>
