--- a/index.html
+++ b/index.html
@@ -320,10 +320,8 @@
                             </div>
                             <h2 class="en-title">GIFT REFERENCE</h2>
                             <p>
-                                We haven't got a gift list for all of you to see; 
-                                because as you all know we never can agreed. 
-                                but if you'd like to help us start our married life, 
-                                a cash contribution would save a lot of strife!
+                                We haven't got a gift list for all of you to see. However, if it is your wish to bless us with a gift, 
+                                we would greatly appreciate a cash contribution to help us start our married life.
                             </p>
                         </div>
                         <div class="text-center" style="align-self: end;">
