adjust big image

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     <img src="assets/images/archeal2.jpg"  class="gallery-image" alt="archeal_jenny">
                 </div>
                 <div class="img-container reveal fade-left sm:fade-right duration couple_3">
-                    <img src="assets/images/archeal_jenny5.png"  class="gallery-image" alt="archeal_jenny" style="height: 100%;">
+                    <img src="assets/images/archeal_jenny5.png"  class="gallery-image gallery-big-img" alt="archeal_jenny">
                 </div>
                 <div class="img-container reveal fade-right sm:fade-bottom couple_4">
                     <img src="assets/images/archeal_jenny10.png"  class="gallery-image object-center" alt="archeal_jenny">
@@ -399,7 +399,7 @@
                 </div>
         
                 <div class="img-container reveal fade-right sm:fade-left duration couple_5">
-                    <img src="assets/images/archeal_jenny9.jpg"  class="gallery-image object-center" alt="archeal_jenny" style="height: 100%;">
+                    <img src="assets/images/archeal_jenny9.jpg"  class="gallery-image object-center gallery-big-img" alt="archeal_jenny">
                 </div>
         
                 <div class="img-container reveal fade-left sm:fade-right duration couple_6">
