--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         
             <div class="grid-container">
                 <div class="img-container reveal fade-left sm:fade-right duration dancing_together">
-                    <img src="assets/images/archeal_jenny5.png"  class="gallery-image gallery-big-img" alt="archeal_jenny">
+                    <img src="assets/images/archeal_jenny5.gif"  class="gallery-image gallery-big-img" alt="archeal_jenny">
                 </div>
                 <div class="img-container reveal fade-bottom sm:fade-left duration sitting_in_grass">
                     <img src="assets/images/archeal_jenny7.jpg"  class="gallery-image" alt="archeal_jenny">
