--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             </div>
         </div>
         <div class="text-center py-5">
-            <p>♡ 2023 September 9</p>
+            <p><i class="fa fa-heart-o text-xs" aria-hidden="true"></i> 2023 September 9</p>
         </div>
         <!-- End of Footer -->
 
