--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 CLICK HERE
             </button>
             <p class="animate-bounce text-xl text-white hidden" id="arrow">
-                ^
+                <i class="fa fa-angle-double-up" aria-hidden="true"></i>
             </p>
         </div>
     </div>
