adjust words and optimize image

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 <img src="assets/icons/cheers.png" alt="cheers" class="card-icons">
                             </div>
                             <h2 class="en-title">RSVP</h2>
-                            <p>We have reserved seats for you. The favor of your reply is requested on June 30, 2023</p>
+                            <p>We have reserved seats for you. The favor of your reply is requested on June 30, 2023. Kindly contact us through our social media account for further details.</p>
                         </div>
                         <div class="text-center" style="align-self: end;">
                             <button onclick="openModal('map-modal')" class="btn">See Location</button>
@@ -442,7 +442,7 @@
                 <div class="modal-content modal-close" id="map-modal-content">
                     <div class="modal-header justify-end border-0">
                         <div class="modal-close-btn">
-                            <i class="fa fa-close text-gray-400 text-sm" onclick="closeModal('map-modal')"></i>
+                            <i class="fa fa-close text-gray-400 text-lg" onclick="closeModal('map-modal')"></i>
                         </div>
                     </div>
         
@@ -486,12 +486,15 @@
                 <div class="modal-content modal-close" id="gift-modal-content">
                     <div class="modal-header justify-end border-0">
                         <div class="modal-close-btn">
-                            <i class="fa fa-close text-gray-400 text-sm" onclick="closeModal('gift-modal')"></i>
+                            <i class="fa fa-close text-gray-400 text-lg" onclick="closeModal('gift-modal')"></i>
                         </div>
                     </div>
         
                     <div class="modal-body pt-0 text-brand-blue text-center px-8 lg:px-12">
                         <h2 class="self-title text-xl sm:text-2xl font-bold text-brand text-left mb-5">QR Code</h2>
+                        <p class="text-left mb-2">
+                            You may send your gift through e-wallet or bank transfer. The QR code for our e-wallets and bank account is provided below. Thank you for your generosity.
+                        </p>
                         <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-5 text-center">
                             <div class="grid gap-3">
                                 <h2 class="text-2xl font-bold">BPI</h2>
@@ -501,7 +504,7 @@
                                     <p>
                                         Archeal Anie
                                     </p>
-                                    <p class="text-brand">Account Number</p>
+                                    <p class="text-brand mt-2">Account Number</p>
                                     <p>
                                         xxxxxxxxxxx393
                                     </p>
@@ -515,7 +518,7 @@
                                     <p>
                                         Jenny Marie De Juan
                                     </p>
-                                    <p class="text-brand">Account Number</p>
+                                    <p class="text-brand mt-2">Account Number</p>
                                     <p>
                                         09xxxxxxx361
                                     </p>
@@ -529,7 +532,7 @@
                                     <p>
                                         Jenny Marie De Juan
                                     </p>
-                                    <p class="text-brand">Account Number</p>
+                                    <p class="text-brand mt-2">Account Number</p>
                                     <p>
                                         09xxxxxx8764
                                     </p>
@@ -543,7 +546,7 @@
                                     <p>
                                         Jenny Marie De Juan
                                     </p>
-                                    <p class="text-brand">Account Number</p>
+                                    <p class="text-brand mt-2">Account Number</p>
                                     <p>
                                         xxxx xxxx 7626
                                     </p>
