--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
         </div>
     </div>
-    <div class="container hidden" id="content">
+    <div class="contain hidden" id="content">
         <!-- Header -->
         <header>
             <div class="header">
