--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </video>
             <div class="banner-title">
                 <h1 class="title">Archeal & Jenny</h1>
-                <h2 class="sub-title mb-10">9TH SEPTEMBER, 2023 | 10:00 AM</h2>
+                <h2 class="sub-title mb-10">9TH SEPTEMBER, 2023 | 09:30 AM</h2>
                 <i class="fa fa-heart-o heart" aria-hidden="true" onclick="goTo('groom_bride')"></i>    
             </div>
         </div>
@@ -189,7 +189,7 @@
             <h3 class="en-main-title reveal fade-bottom">Principal Sponsors</h3>
         
             <div class="sponsors grid xs:grid-cols-2 xs:gap-x-20 mb-5 reveal fade-bottom">
-                <p>Athan Hutalla</p>
+                <p>Junatan Hutalla</p>
                 <p>Rosal Hutalla</p>
                 <p>Godelio Umayaw</p>
                 <p>Cristina Umayaw</p>
