add link for attendance

--- a/index.html
+++ b/index.html
@@ -283,10 +283,14 @@
                                 <img src="assets/icons/cheers.png" alt="cheers" class="card-icons">
                             </div>
                             <h2 class="en-title">RSVP</h2>
-                            <p>We have reserved seats for you. The favor of your reply is requested on June 30, 2023. Kindly contact us through our social media account for further details.</p>
+                            <p>
+                                We have reserved seats for you. The favor of your reply is requested on June 30, 2023.
+                                Please click the button below to confirm your attendance or
+                                contact us through our social media account.
+                            </p>
                         </div>
-                        <div class="text-center" style="align-self: end;">
-                            <button onclick="openModal('map-modal')" class="btn">See Location</button>
+                        <div class="text-center">
+                            <a href="https://fb.me/g/p_AMpABbzZGXTVG7Vb/5sXVVZYs?ref=share" target="_blank" class="btn">See attendance</a>
                         </div>
                     </div>
                     <div class="card reveal fade-bottom md:duration-2">
@@ -306,8 +310,11 @@
                             </p>
                             <p>
                                 <span class="font-bold">Gentleman:</span>
-                                <span>formal</span>
+                                <span>Formal</span>
                             </p>
+                        </div>
+                        <div class="text-center" style="align-self: end;">
+                            <button onclick="openModal('map-modal')" class="btn">See Location</button>
                         </div>
                     </div>
                     <div class="card reveal fade-bottom md:duration-3">
