--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             <div class="sponsors grid xs:grid-cols-2 xs:gap-x-20 mb-5 reveal fade-bottom">
                 <p>Junatan Hutalla</p>
                 <p>Rosal Hutalla</p>
-                <p>Godelio Umayaw</p>
-                <p>Cristina Umayaw</p>
+                <p>Godelio Omayao</p>
+                <p>Cristina Omayao</p>
                 <p>Jonilo De Juan</p>
                 <p>Micheryl De Juan</p>
                 <p>Wilfredo Garejo</p>
@@ -266,7 +266,7 @@
             <div class="reveal fade-bottom mb-10">
                 <h3 class="en-main-title">Flower Girls</h3>
                 <p>Ezra Legaspi</p>
-                <p>Abigail Bumarlong</p>
+                <p>Mary Abigail Bumarlong</p>
             </div>
         
             <img src="assets/icons/flower-big.png" alt="flower-big" class="absolute w-28 sm:w-60 bottom-0" style="z-index:-1;left:9px">
