--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="grid sm:grid-cols-3 gap-2 mb-10 reveal fade-bottom">
                 <div>
                     <h3 class="en-main-title">Ring Bearer</h3>
-                    <p>Jayden Cassimir Haro</p>
+                    <p>Jayden Casimir Haro</p>
                 </div>
                 <div>
                     <h3 class="en-main-title">Coin Bearer</h3>
