--- a/emman-and-jessica.html
+++ b/emman-and-jessica.html
@@ -7,19 +7,19 @@
         <link rel="icon" href="ej-assets/icons/ej-logo.png">
 
         <meta property="og:title" content="Emmanuel &amp; Jessica">
-        <meta property="og:description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
-        <meta property="og:image" content="ej-assets/images/archeal_jenny2.jpg">
+        <meta property="og:description" content="Emmanuel & Jessica | Romans 8:28 - And we know that in all things God works for the good of those who love him who have been called according to his purpose.">
+        <meta property="og:image" content="ej-assets/images/ejp2.jpeg">
         <meta property="og:url" content="/">
         <meta property="og:type" content="website">
 
         <!-- Twitter -->
         <meta name="twitter:title" content="Emmanuel &amp; Jessica">
-        <meta name="twitter:description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
-        <meta name="twitter:image" content="ej-assets/images/archeal_jenny2.jpg">
+        <meta name="twitter:description" content="Emmanuel & Jessica | Romans 8:28 - And we know that in all things God works for the good of those who love him who have been called according to his purpose.">
+        <meta name="twitter:image" content="ej-assets/images/ejp2.jpeg">
         <meta name="twitter:card" content="summary_large_image">
 
         <title>Emmanuel &amp; Jessica</title>
-        <meta name="description" content="1 John 4:18-19 - There is no fear in love. But perfect love drives out fear, because fear has to do with punishment. The one who fears is not made perfect in love.">
+        <meta name="description" content="Emmanuel & Jessica | Romans 8:28 - And we know that in all things God works for the good of those who love him who have been called according to his purpose.">
 
         <!-- Fonts -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
