--- a/emman-and-jessica.html
+++ b/emman-and-jessica.html
@@ -72,7 +72,7 @@
         </style>
 
         <!-- Styles -->
-        <link href="app.css" rel="stylesheet">
+        <link href="ej-app.css" rel="stylesheet">
 
     </head>
     <body>
